<resources>
    <string name="app_name">Video_convert_community</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">victorjack1097@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="image_test">girl</string>
    <string name="button">Button</string>
    <string name="click">Click</string>
    <string name="plus">plus</string>

    <string name="defaultInt">0</string>
    <string name="sum">0</string>
    <string name="SharePerName">sp</string>
    <string name="save_int">value</string>
    <string name="default_value">0</string>
    <string name="account_view">account_view</string>
    <string name="good_point">good_point</string>
    <string name="bad_point">bad_point</string>


</resources>
